--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1667,7 +1667,18 @@
    "id": "e0c8e2d8-9185-4465-9bb2-16eef06b2089",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def open_dataset(file_name='AppleStore.csv', header=True):        \n",
+    "    opened_file = open(file_name)\n",
+    "    from csv import reader\n",
+    "    read_file = reader(opened_file)\n",
+    "    data = list(read_file)\n",
+    "    \n",
+    "    if header:\n",
+    "        return data[1:]\n",
+    "    else:\n",
+    "        return data"
+   ]
   },
   {
    "cell_type": "code",
@@ -1675,7 +1686,20 @@
    "id": "dfb1a703-26f1-4c78-b374-52a6ae624489",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def open_dataset(file_name='AppleStore.csv', header=True):        \n",
+    "    opened_file = open(file_name)\n",
+    "    from csv import reader\n",
+    "    read_file = reader(opened_file)\n",
+    "    data = list(read_file)\n",
+    "    \n",
+    "    if header:\n",
+    "        return data[1:]\n",
+    "    else:\n",
+    "        return data\n",
+    "apps_data = list(open_dataset(\"AppleStore.csv\", header = True))    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -1683,15 +1707,15 @@
    "id": "ec5688bc-2ed0-4cca-9eb7-53ee67ef1e95",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1089a75d-e481-472e-9f9b-c95a5e51011d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def pythagorean(a , b):\n",
+    "    a_squared = a**2\n",
+    "    b_squared = b**2\n",
+    "    c_squared = a_squared + b_squared\n",
+    "    return a_squared, b_squared, c_squared\n",
+    "print(pythagorean(5, 12))    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -1699,15 +1723,48 @@
    "id": "07903fc1-932f-43a5-a01b-13eeb44bd7b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def open_dataset(file_name='AppleStore.csv', header=True):        \n",
+    "    opened_file = open(file_name)\n",
+    "    from csv import reader\n",
+    "    read_file = reader(opened_file)\n",
+    "    data = list(read_file)\n",
+    "    \n",
+    "    if header:\n",
+    "        return data[0], data[1:]\n",
+    "    else:\n",
+    "        return data\n",
+    "\n",
+    "header, apps_data = open_dataset(file_name ='AppleStore.csv', header=True)\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "6f5a1e52-844a-48d8-8938-c3b7de143175",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "\n",
+    "def print_constant():\n",
+    "    x = 3.14\n",
+    "    print(x)\n",
+    "\n",
+    "print_constant()\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "code",
