--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1768,24 +1768,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "2d9c6015-5731-4977-b9f2-197692bf4f2a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.72\n",
+      "1000\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = 'mathematical constant'\n",
+    "a_sum = 1000\n",
+    "length = 50\n",
+    "def exponential(x):\n",
+    "    e = 2.72 \n",
+    "    print(e)\n",
+    "    return (e, x)\n",
+    "result = exponential(5)\n",
+    "def divide():\n",
+    "    print(a_sum)\n",
+    "    print(length)\n",
+    "    return (a_sum, length)    \n",
+    "result_2 = divide()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "90cdf354-571b-4f97-a7e6-327f1b489bc4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Dataquest!\n",
+      "Welcome to Jupyter Notebook!\n",
+      "Welcome to Python!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def welcome(a_string):\n",
+    "    print(\"Welcome to \" + a_string + \"!\")\n",
+    "dq = \"Dataquest\"  \n",
+    "jn = \"Jupyter Notebook\"\n",
+    "py = \"Python\"\n",
+    "welcome(dq)\n",
+    "welcome(jn)\n",
+    "welcome(py)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c42ed148-4656-4191-a8d2-250e9ca1c2ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c430e3ee-95a2-4862-83c4-ee2c669f2efd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edcd9b0a-3693-40a3-9bf4-88705d5a4f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba61178d-0c6b-421a-bd05-00b10b115ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "824afd25-5826-4474-b241-46fdbc6f28e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3fd915-48f4-4497-b8c9-c9b64bacbc6b",
    "metadata": {},
    "outputs": [],
    "source": []
