--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1831,7 +1831,25 @@
    "id": "c430e3ee-95a2-4862-83c4-ee2c669f2efd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# open the file and make it a list\n",
+    "f = open(\"nyc_taxis.csv\", \"r\")\n",
+    "taxi_list = list(csv.reader(f))\n",
+    "\n",
+    "# remove the header row\n",
+    "taxi_list = taxi_list[1:]\n",
+    "\n",
+    "# convert all values to floats\n",
+    "converted_taxi_list = []\n",
+    "for row in taxi_list:\n",
+    "    converted_row = []\n",
+    "    for item in row:\n",
+    "        converted_row.append(float(item))\n",
+    "    converted_taxi_list.append(converted_row)\n",
+    "\n",
+    "# convert the list of lists to an ndarray\n",
+    "taxi = np.array(converted_taxi_list)"
+   ]
   },
   {
    "cell_type": "code",
