--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1857,7 +1857,16 @@
    "id": "edcd9b0a-3693-40a3-9bf4-88705d5a4f2f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "taxi = np.genfromtxt('nyc_taxis.csv', delimiter=',')\n",
+    "taxi_header_removed = taxi[1:]\n",
+    "removed_shape = taxi_header_removed.shape \n",
+    "taxi_header_skipped = np.genfromtxt('nyc_taxis.csv', delimiter=',', skip_header=1)\n",
+    "skip_header = taxi_header_skipped.shape \n",
+    "skipped_shape = taxi_header_skipped\n",
+    "print(taxi_header_removed[:5])\n",
+    "print(taxi_header_skipped[:5])"
+   ]
   },
   {
    "cell_type": "code",
@@ -1865,7 +1874,16 @@
    "id": "ba61178d-0c6b-421a-bd05-00b10b115ee7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pickup_month = taxi[:, 1]\n",
+    "\n",
+    "january_bool = pickup_month == 1\n",
+    "january = pickup_month[january_bool]\n",
+    "january_rides = january.shape[0]\n",
+    "february_bool = pickup_month  == 2\n",
+    "february = pickup_month[february_bool]\n",
+    "february_rides = february.shape[0]\n"
+   ]
   },
   {
    "cell_type": "code",
