--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1891,7 +1891,12 @@
    "id": "824afd25-5826-4474-b241-46fdbc6f28e4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "tip_amount = taxi[:, 12]\n",
+    "tip_bool = tip_amount > 20\n",
+    "top_tips = taxi[tip_bool  , 5:14]   "
+   ]
   },
   {
    "cell_type": "code",
