--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1904,6 +1904,156 @@
    "id": "ee3fd915-48f4-4497-b8c9-c9b64bacbc6b",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "taxi_copy = taxi.copy()\n",
+    "taxi_copy[1066 ,5] = 1 \n",
+    "taxi_copy[:, 0] = 16\n",
+    "taxi_copy[[550,551], 7]  = np.mean(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5d19241-5ded-496c-943b-566c9fdcac6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxi_copy = taxi.copy()\n",
+    "trip_length =  taxi_copy[:, 8] \n",
+    "trip_length[trip_length < 60] = 0  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "5a876de7-a240-46fc-a015-6619d73bed6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ca010c88-9721-4e5e-96f6-c4eae0e903a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = np.array([[1,2,3],\n",
+    "               [4,5,6],\n",
+    "               [7,8,9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "5635eb4a-5157-4cb4-b4f9-1778e10353a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "1e2d0a95-a3f8-407d-97e1-b30218c0a9a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[:,1]>2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "e5434212-ab96-4a48-ac40-7aa6e28718d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mymask = [False,  True,  True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9d9d97b1-a5f3-4f29-a0f6-8b0bd960011c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[mymask,1]=99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "a2388ae9-c85d-4e98-8ab0-33887f7b221f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 4, 99,  6],\n",
+       "       [ 7, 99,  9]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7113ef44-d963-4acd-b988-8773c6e28f9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adf91794-f04d-407c-903e-d02142c46aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "577694c5-c8b0-43e7-aef6-6feb38b72d0f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
