--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2038,7 +2038,14 @@
    "id": "7113ef44-d963-4acd-b988-8773c6e28f9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a new array filled with `0`\n",
+    "zeros = np.zeros([taxi.shape[0], 1])\n",
+    "# append the array to the taxi data to create a new column\n",
+    "taxi_modified = np.concatenate([taxi, zeros], axis=1)\n",
+    "# inspect the last five columns of the first ten rows\n",
+    "print(taxi_modified[:10, -5:])"
+   ]
   },
   {
    "cell_type": "code",
@@ -2046,7 +2053,29 @@
    "id": "adf91794-f04d-407c-903e-d02142c46aa7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "pickup_location_code = 5 \n",
+    "jfk_mask = taxi[: , pickup_location_code] == 2\n",
+    "jfk = taxi[jfk_mask]\n",
+    "jfk_count = len(jfk)\n",
+    " \n",
+    "laguardia_mask =  taxi[: , pickup_location_code] == 3\n",
+    "laguardia = taxi[laguardia_mask]\n",
+    "laguardia_count = len(laguardia)\n",
+    "\n",
+    "newark_mask = taxi[: , pickup_location_code] == 1\n",
+    "newark = taxi[newark_mask]\n",
+    "newark_count = len(newark)\n",
+    "if jfk_count > laguardia_count and jfk_count > newark_count:\n",
+    "     busiest_airport = \"jfk\"\n",
+    "elif laguardia_count > jfk_count and laguardia_count > newark_count:\n",
+    "     busiest_airport = \"laguardia\"\n",
+    "else:\n",
+    "     busiest_airport = \"newark\"\n",
+    "\n",
+    "print(f\"\\nBusiest airport: {busiest_airport}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -2054,7 +2083,16 @@
    "id": "577694c5-c8b0-43e7-aef6-6feb38b72d0f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trip_distance = taxi[:, 7] # trip distance in miles\n",
+    "trip_length = taxi[:, 8] / 3600 # trip length in hours\n",
+    "trip_mph = trip_distance / trip_length # average trip speed in mph\n",
+    "cleaned_taxi_mask = trip_mph  < 100\n",
+    "cleaned_taxi = taxi[cleaned_taxi_mask]\n",
+    "mean_distance = cleaned_taxi[:, 7].mean() \n",
+    "mean_length = cleaned_taxi[:, 8].mean()\n",
+    "mean_total_amount = cleaned_taxi[:, -2].mean()"
+   ]
   }
  ],
  "metadata": {
