--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2093,6 +2093,85 @@
     "mean_length = cleaned_taxi[:, 8].mean()\n",
     "mean_total_amount = cleaned_taxi[:, -2].mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcbf9651-27e0-4563-b91c-390095d32277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "f500 = pd.read_csv('f500.csv', index_col=0)\n",
+    "f500.index.name = None\n",
+    "f500_type = type(f500)\n",
+    "f500_shape = f500.shape\n",
+    "print(f500_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7e1e023-e355-47f5-83dd-8770bea5e7d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f500.info()\n",
+    "float64_dtype = sum(f500.dtypes == 'float64') \n",
+    "int64_dtype = sum(f500.dtypes == 'int64')\n",
+    "object_dtype = sum(f500.dtypes == object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d1bedb-cacb-417d-8a41-a5d1c1bcd912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "industries = f500.loc[:, 'industry']\n",
+    "industries_type = type(industries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89067f7-f815-4c67-9ee5-3c6ad3d0e007",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "375a017c-cc81-4483-a283-a04e22a1a062",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e732e72-bde9-410e-be3c-35521feba7b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa1d0ad5-2963-4d8f-8cfb-2e387cb800d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da6c7355-455d-4d05-bced-888291a4a17f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
