--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2139,7 +2139,11 @@
    "id": "f89067f7-f815-4c67-9ee5-3c6ad3d0e007",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "toyota = f500.loc['Toyota Motor',:]\n",
+    "drink_companies = f500.loc[[\"Anheuser-Busch InBev\", \"Coca-Cola\", \"Heineken Holding\"]]\n",
+    "middle_companies = f500.loc[\"Tata Motors\":\"Nationwide\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -2147,12 +2151,132 @@
    "id": "375a017c-cc81-4483-a283-a04e22a1a062",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries = f500['country']\n",
+    "country_counts = countries.value_counts()\n",
+    "top_country = \"USA\"\n",
+    "hq_locations = f500['hq_location']\n",
+    "hql_counts = hq_locations.value_counts()\n",
+    "top_hq_city = \"City\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0e732e72-bde9-410e-be3c-35521feba7b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = f500[\"country\"]\n",
+    "country_counts = countries.value_counts()\n",
+    "india = country_counts.loc[\"India\"] \n",
+    "print(type(india))\n",
+    "north_america = country_counts.loc[[\"USA\", \"Canada\", \"Mexico\"]]\n",
+    "print(type(north_america))\n",
+    "japan_to_spain = country_counts.loc[\"Japan\":\"Spain\"]\n",
+    "print(type(japan_to_spain))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b7016b-9828-4763-82a9-617bb19792c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b25d8a6-0c5c-47a9-b17f-15c23d9c75ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e6e29c-62ba-4ea0-9b4f-13d88eeaf400",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62caf9c9-1ede-4201-912c-1658d2ba5479",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113d7758-93cb-4a35-9dce-514edb7373b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30a4baff-2226-45ae-86ec-814e39e2bfa6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69b367a5-4098-4838-bbae-078685ad3b35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2e267cc-71d8-45ac-b2d5-c3d8db7d8287",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e1053e-68a5-4112-836f-45c539ef5a82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85316b2f-cb7f-4e21-8a6c-06b38d6d8266",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ccb1b7-9430-46bd-83cd-bed14b8b5f49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0002f8e-5549-4868-914f-7f08565c323d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24650e35-ab34-4a4b-89c4-35bb8228355c",
    "metadata": {},
    "outputs": [],
    "source": []
