--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2183,7 +2183,11 @@
    "id": "08b7016b-9828-4763-82a9-617bb19792c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "big_movers = f500.loc[[\"Aviva\", \"HP\", \"JD.com\", \"BHP Billiton\"], [\"rank\", \"previous_rank\"]]\n",
+    "bottom_companies = f500.loc[\"National Grid\" :\"AutoNation\", [\"rank\",\"sector\",\"country\"]]\n",
+    "revenue_giants = f500.loc[[\"Apple\", \"Industrial & Commercial Bank of China\", \"China Construction Bank\",\"Agricultural Bank of China\"],'revenues':'profit_change']"
+   ]
   },
   {
    "cell_type": "code",
@@ -2191,7 +2195,28 @@
    "id": "8b25d8a6-0c5c-47a9-b17f-15c23d9c75ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "import numpy as np\n",
+    " \n",
+    "# imported nyc_taxi.csv as a list of lists\n",
+    "f = open(\"nyc_taxis.csv\", \"r\")\n",
+    "taxi_list = list(csv.reader(f))\n",
+    "\n",
+    "# remove the header row\n",
+    "taxi_list = taxi_list[1:]\n",
+    "\n",
+    "# convert all values to floats\n",
+    "converted_taxi_list = []\n",
+    "for row in taxi_list:\n",
+    "    converted_row = []\n",
+    "    for element in row:\n",
+    "        converted_row.append(float(element))\n",
+    "    converted_taxi_list.append(converted_row)\n",
+    "\n",
+    "# start writing your code below this comment\n",
+    "taxi = np.array(converted_taxi_list)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2199,7 +2224,11 @@
    "id": "f4e6e29c-62ba-4ea0-9b4f-13d88eeaf400",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "columns_1_4_7 = taxi[:,[1, 4, 7]]\n",
+    "row_99_columns_5_to_8 = taxi[99,5:9] \n",
+    "rows_100_to_200_column_14 = taxi[100:201,14]"
+   ]
   },
   {
    "cell_type": "code",
