--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2236,7 +2236,12 @@
    "id": "62caf9c9-1ede-4201-912c-1658d2ba5479",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fare_amount = taxi[:, 9]\n",
+    "fees_amount = taxi[:, 10]\n",
+    "fare_and_fees = fare_amount + fees_amount\n",
+    "print(fare_and_fees)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2244,7 +2249,14 @@
    "id": "113d7758-93cb-4a35-9dce-514edb7373b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trip_distance_miles = taxi[:, 7]\n",
+    "trip_length_seconds = taxi[:, 8]\n",
+    "\n",
+    "trip_length_hours = trip_length_seconds / 3600 \n",
+    "trip_mph = trip_distance_miles / trip_length_hours\n",
+    "print(trip_mph[:10])"
+   ]
   },
   {
    "cell_type": "code",
@@ -2252,7 +2264,11 @@
    "id": "30a4baff-2226-45ae-86ec-814e39e2bfa6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mph_min = trip_mph.min()\n",
+    "mph_max = trip_mph.max()\n",
+    "mph_mean = trip_mph.mean()"
+   ]
   },
   {
    "cell_type": "code",
@@ -2260,7 +2276,14 @@
    "id": "69b367a5-4098-4838-bbae-078685ad3b35",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# extract the first 5 rows only\n",
+    "taxi_first_five = taxi[:5]\n",
+    "# select columns: fare_amount, fees_amount, tolls_amount, and tip_amount\n",
+    "fare_components = taxi_first_five[:, 9:13]\n",
+    "fare_sums = fare_components.sum(axis=1)\n",
+    "fare_totals = taxi_first_five[:,13]"
+   ]
   },
   {
    "cell_type": "code",
