--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2291,7 +2291,10 @@
    "id": "d2e267cc-71d8-45ac-b2d5-c3d8db7d8287",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f500['rank_change'] = f500['previous_rank'] - f500['rank']\n",
+    "rank_change_desc = f500['rank_change'].describe()"
+   ]
   },
   {
    "cell_type": "code",
@@ -2299,7 +2302,13 @@
    "id": "45e1053e-68a5-4112-836f-45c539ef5a82",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_unit_length = 10\n",
+    "y_unit_length = 1000\n",
+    "x_coordinate_A = 70\n",
+    "y_coordinate_B = 5000\n",
+    "C_coordinates = [50,9000]"
+   ]
   },
   {
    "cell_type": "code",
@@ -2307,7 +2316,13 @@
    "id": "85316b2f-cb7f-4e21-8a6c-06b38d6d8266",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "industry_usa = f500[f500 ['country']=='USA'][\"industry\"].value_counts().head(2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "sector_china = f500[f500['country']=='China']['sector'].value_counts().head(3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2315,7 +2330,16 @@
    "id": "f3ccb1b7-9430-46bd-83cd-bed14b8b5f49",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# read the dataset into a pandas dataframe\n",
+    "f500 = pd.read_csv(\"f500.csv\", index_col=0)\n",
+    "f500.index.name = None\n",
+    "\n",
+    "# replace 0 values in the \"previous_rank\" column with NaN\n",
+    "f500.loc[f500[\"previous_rank\"] == 0, \"previous_rank\"] = np.nan"
+   ]
   },
   {
    "cell_type": "code",
@@ -2323,7 +2347,13 @@
    "id": "c0002f8e-5549-4868-914f-7f08565c323d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "f500 = pd.read_csv('f500.csv')\n",
+    "f500.index.name = \"Company\"\n",
+    "f500.columns.name = \"Metric\"\n",
+    "f500.loc[f500[\"previous_rank\"] == 0,\"previous_rank\"] = np.nan"
+   ]
   },
   {
    "cell_type": "code",
@@ -2331,7 +2361,10 @@
    "id": "24650e35-ab34-4a4b-89c4-35bb8228355c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_three_rows = f500.iloc[:3,:]\n",
+    "first_seventh_row_slice = f500.iloc[[0,6],0:5]"
+   ]
   },
   {
    "cell_type": "code",
