--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2372,6 +2372,51 @@
    "id": "aa1d0ad5-2963-4d8f-8cfb-2e387cb800d8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "large_revenue = f500['revenues'] > 100000\n",
+    "negative_profits = f500['profits'] < 0\n",
+    "combined = large_revenue & negative_profits\n",
+    "big_rev_neg_profit = f500.loc[combined]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39c90755-d014-411e-a00a-47de58c943cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d73127-5875-4b89-948f-f1ca3254d966",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ad8418-8483-4f69-9404-3616bd4249b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0b6f61-8ea2-4284-b222-5e6fa8eb6f12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3e8d4e0-4ce8-4dd5-82b1-9849b3cbf92b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
