--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2385,7 +2385,13 @@
    "id": "39c90755-d014-411e-a00a-47de58c943cc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "selected_rows = f500[f500['country']=='Japan'] \n",
+    "sorted_rows = selected_rows.sort_values(\"profits\", ascending=False)\n",
+    "top_japanese_company = sorted_rows.iloc[0][['company','profits']]\n",
+    "print(top_japanese_company)\n",
+    "                                        "
+   ]
   },
   {
    "cell_type": "code",
@@ -2393,7 +2399,16 @@
    "id": "f0d73127-5875-4b89-948f-f1ca3254d966",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_employer_by_country = {}\n",
+    "countries = f500['country'].unique()\n",
+    "for c in countries:\n",
+    "    selected_rows = f500[f500['country']==c]\n",
+    "    sorted_rows =               selected_rows.sort_values(\"employees\", ascending=False)\n",
+    "    company = sorted_rows.iloc[0]['company']\n",
+    "    top_employer_by_country[c]=company\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -2401,7 +2416,17 @@
    "id": "c2ad8418-8483-4f69-9404-3616bd4249b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_roa_by_sector = {}\n",
+    "f500[\"roa\"] = f500[\"profits\"] / f500[\"assets\"] \n",
+    "sectors = f500[\"sector\"].unique()\n",
+    "for s in sectors:\n",
+    "    selected_rows = f500[f500[\"sector\"] == s]\n",
+    "    sort_rows = selected_rows.sort_values(\"roa\", ascending = False)\n",
+    "    top_company = sort_rows.iloc[0][\"company\"]\n",
+    "    top_roa_by_sector[s] = top_company\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -2409,7 +2434,16 @@
    "id": "be0b6f61-8ea2-4284-b222-5e6fa8eb6f12",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "laptops = pd.read_csv('laptops.csv', encoding = \"latin-1\")\n",
+    "new_columns = []\n",
+    "for c in laptops.columns:\n",
+    "    clean_c = c.strip()\n",
+    "    new_columns.append(clean_c)\n",
+    "laptops.columns = new_columns\n",
+    "print(laptops.columns)"
+   ]
   },
   {
    "cell_type": "code",
