--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2451,7 +2451,11 @@
    "id": "d3e8d4e0-4ce8-4dd5-82b1-9849b3cbf92b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "laptops[\"screen_size\"] = laptops[\"screen_size\"].str.replace('\"', '')\n",
+    "laptops[\"ram\"] = laptops[\"ram\"].str.replace('GB', ' ')\n",
+    "print(laptops[\"ram\"].unique())\n"
+   ]
   },
   {
    "cell_type": "code",
