--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2463,7 +2463,102 @@
    "id": "da6c7355-455d-4d05-bced-888291a4a17f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "laptops[\"screen_size\"] = laptops[\"screen_size\"].astype(float)\n",
+    "print(laptops['ram'].dtype)\n",
+    "print(laptops['screen_size'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24563891-2bbc-4c26-a6b7-e15940c6d003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laptops.rename({\"screen_size\": \"screen_size_inches\"}, axis=1, inplace=True)\n",
+    "laptops.rename({'ram': 'ram_gb'}, axis=1, inplace=True)\n",
+    "ram_gb_desc = laptops['ram_gb'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8665fa53-7b40-4c93-8dc7-606ff33f3e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpu_split = laptops['gpu'].str.split()\n",
+    "laptops['gpu_manufacturer'] = gpu_split.str[0]\n",
+    "gpu_manufacturer_counts = laptops['gpu_manufacturer'].value_counts()\n",
+    "laptops['cpu_manufacturer'] = laptops['cpu'].str.split().str[0]\n",
+    "cpu_manufacturer_counts = laptops['cpu_manufacturer'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "c398889b-9f15-41ea-a4a2-0fe40955844c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I am a programmer'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I am a {}'.format('programmer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b979f327-cc55-494f-9050-3684bd195abf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(laptops['os'].unique())\n",
+    "\n",
+    "mapping_dict = {'Android': 'Android',\n",
+    "  'Chrome OS': 'Chrome OS',\n",
+    "  'Linux': 'Linux',\n",
+    "  'Mac OS': 'macOS',\n",
+    "  'No OS': 'No OS',\n",
+    "  'Windows': 'Windows',\n",
+    "  'macOS': 'macOS'}\n",
+    "laptops['os'] = laptops['os'].map(arg=mapping_dict)\n",
+    "laptops['os'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a63d6c9e-eca5-42c9-847b-c6223997844b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laptops_no_null_rows = laptops.dropna(axis=0)\n",
+    "laptops_no_null_cols = laptops.dropna(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c690b42b-33ac-42eb-99e0-585223300742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_counts_before = laptops.loc[laptops[\"os_version\"].isnull(), \"os\"].value_counts()\n",
+    "laptops.loc[laptops[\"os\"] == \"macOS\", \"os_version\"] = \"X\"\n",
+    "laptops.loc[laptops['os'] == 'No OS', 'os_version'] = 'Not Applicable'\n",
+    "value_counts_after = laptops.loc[laptops[\"os_version\"].isnull(), \"os\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
