--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2559,6 +2559,22 @@
     "laptops.loc[laptops['os'] == 'No OS', 'os_version'] = 'Not Applicable'\n",
     "value_counts_after = laptops.loc[laptops[\"os_version\"].isnull(), \"os\"].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76bf3e85-d354-4440-ad3d-06fcacd8f626",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month_number = [1, 2, 3, 4, 5, 6, 7]\n",
+    "new_cases = [9926, 76246, 681488, 2336640,\n",
+    "             2835147, 4226655, 6942042]\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(month_number, new_cases)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
