--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2575,6 +2575,45 @@
     "plt.plot(month_number, new_cases)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3e1d648-09ce-4f1b-aaaf-2481c7755b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "who_time_series = pd.read_csv('WHO_time_series.csv')\n",
+    "who_time_series['Date_reported'] = pd.to_datetime(who_time_series['Date_reported'])\n",
+    "print(who_time_series.head(5))\n",
+    "print(who_time_series.tail(5))\n",
+    "who_time_series.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469dd2d0-c30e-49f4-8ca8-9de4b8a0f152",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40f1de6a-e657-41b9-953f-a471007bf840",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9f0fa8f-b5c1-45ee-97c8-5ecffb120196",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
