--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2597,7 +2597,16 @@
    "id": "469dd2d0-c30e-49f4-8ca8-9de4b8a0f152",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "argentina = who_time_series[who_time_series['Country'] == 'Argentina']\n",
+    "print(argentina.dtypes)\n",
+    "plt.plot(argentina['Date_reported'],argentina['Cumulative_cases']) \n",
+    "plt.title(\"Argentina: Cumulative Reported Cases\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Number of Cases\")\n",
+    "plt.show()\n",
+    "argentina_graph_type = 'exponential'"
+   ]
   },
   {
    "cell_type": "code",
@@ -2605,12 +2614,92 @@
    "id": "40f1de6a-e657-41b9-953f-a471007bf840",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "bike_sharing = pd.read_csv('day.csv')\n",
+    "bike_sharing['dteday'] = pd.to_datetime(bike_sharing['dteday'])\n",
+    "plt.plot(bike_sharing['dteday'], bike_sharing['casual'],label='Casual')\n",
+    "plt.plot(bike_sharing['dteday'], bike_sharing['registered'],label='Registered')\n",
+    "plt.xticks(rotation=30)\n",
+    "plt.ylabel('Bikes Rented')\n",
+    "plt.xlabel('Date')\n",
+    "plt.title('Bikes Rented: Casual vs. Registered')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c9f0fa8f-b5c1-45ee-97c8-5ecffb120196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "bike_sharing = pd.read_csv('day.csv')\n",
+    "bike_sharing['dteday'] = pd.to_datetime(bike_sharing['dteday'])\n",
+    "temp_atemp_corr = bike_sharing['temp'].corr(bike_sharing['atemp'])\n",
+    "wind_hum_corr = bike_sharing['windspeed'].corr(bike_sharing['hum'])\n",
+    "plt.scatter(bike_sharing['temp'],bike_sharing['atemp'])\n",
+    "plt.xlabel('Air Temperature')\n",
+    "plt.ylabel('Feeling Temperature')\n",
+    "plt.show()\n",
+    "plt.scatter(bike_sharing['windspeed'],bike_sharing['hum'])\n",
+    "plt.xlabel('Wind Speed')\n",
+    "plt.ylabel('Humidity')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "286fa7d1-5aa0-4eed-97a7-59f1c6afc2d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "bike_sharing = pd.read_csv('day.csv')\n",
+    "# print(bike_sharing.corr(bike_sharing['weathersit'],bike_sharing['cnt'])\n",
+    "print(bike_sharing[['weathersit','hum']].corr())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f75fc75-5bb7-4577-9518-b9f3d9298504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "bike_sharing = pd.read_csv('day.csv')\n",
+    "bike_sharing['dteday'] = pd.to_datetime(bike_sharing['dteday'])\n",
+    "plt.scatter(bike_sharing['workingday'],bike_sharing['casual'])\n",
+    "plt.title('Working Day Vs. Casual')\n",
+    "plt.show()\n",
+    "plt.scatter(bike_sharing['workingday'],bike_sharing['registered'])\n",
+    "plt.title('Working Day Vs. Registered')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca09552-051d-4cbb-9dc6-b110d317c88b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4f17346-c157-41d0-8c09-dabd394dc6cc",
    "metadata": {},
    "outputs": [],
    "source": []
